name:                multiaddr
version:             0.1.0
synopsis:            A network address format
description:         A network address format
homepage:            http://github.com/micxjo/hs-multiaddr
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcxio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcxio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  exposed-modules:     Network.Multiaddr
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , hashable
                     , errors
                     , cereal
                     , bytestring
  default-language:    Haskell2010

test-suite multiaddr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , multiaddr
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/hs-multiaddr
