name:                multiaddr
version:             0.2.0
synopsis:            A network address format
description:         Multiaddr is a self-describing network address format
                     supporting a variety of protocols, with both string
                     and binary representations.
homepage:            http://github.com/micxjo/hs-multiaddr
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  exposed-modules:     Network.Multiaddr
  other-modules:       Data.Serialize.Varint
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , hashable
                     , errors
                     , cereal
                     , bytestring
                     , base58-bytestring >= 0.1.0 && < 0.2.0
  default-language:    Haskell2010

test-suite multiaddr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 4.7 && < 5
                     , multiaddr
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/hs-multiaddr
